[package]
name = "rustcast"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = [
    "rt",
    "net",
    "macros",
    "rt-multi-thread",
    "fs",
    "io-util",
] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1"
strum = { version = "0.27", features = ["derive"] }
log = "0.4"
bytes = "1"
http = "1"
futures = { version = "0.3", features = ["thread-pool"] }
tokio-util = { version = "0.7", features = ["codec", "rt", "io", "net"] }
tokio-stream = "0.1"
serde_json = "1"
httparse = "1.10"
httpdate = "1"
async-trait = "0.1"
once_cell = "1"
id3 = "1.16"
fern = "0.7"
chrono = "0.4"
mp3-duration = "0.1"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "migrate",
], optional = true }

[features]
default = []
db = ["sqlx"]

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
