#:schema https://json.schemastore.org/cargo.json
[package]
name = "rustcast"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_lazy_playlist_child = { path = "derive_lazy_playlist_child" }
tokio = { version = "1", features = [
    "rt",
    "net",
    "macros",
    "rt-multi-thread",
    "fs",
    "io-util",
] }
serde = { version = "1.0", features = ["derive", "rc"] }
anyhow = "1"
strum = { version = "0.27", features = ["derive"] }
log = "0.4"
bytes = "1"
http = "1"
futures = { version = "0.3", features = ["thread-pool"] }
tokio-util = { version = "0.7", features = ["codec", "rt", "io", "net"] }
tokio-stream = { version = "0.1", features = ["fs"] }
serde_json = "1"
httparse = "1.10"
async-trait = "0.1"
once_cell = "1"
id3 = "1.16"
fern = "0.7"
chrono = "0.4"
mp3-duration = "0.1"
rand = "0.9"
object_store = { version = "0.12", features = ["gcp", "aws", "azure", "http"] }
moka = { version = "0.12", features = ["future"] }
clap = { version = "4.5", features = ["derive"] }
async-stream = "0.3"
sha2 = "0.10"
tempfile = "3.18"
thiserror = "2"
glob = "0.3"

[dev-dependencies]
static_assertions = "1.1"

[profile.release]
debug = false
strip = "symbols"
panic = "abort"
